# libcec-static-builds

./: CMakeLists.txt
.github/actions/build-static-libcec-unix/: action.yml  build.sh
.github/actions/build-static-libcec-windows/: action.yml
.github/workflows/: build-static-libcec.yml
src/cec-client/: CMakeLists.txt
src/cecc-client/: CMakeLists.txt
src/libcec/: CMakeLists.txt
src/libcec/cmake/: CheckPlatformSupport.cmake  LinkPlatformSupport.cmake
src/platform/: CMakeLists.txt
